--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,15 +5,15 @@ body {
 
 body {
   display: flex;
-  align-items: center;
+  align-items:center;
   padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #f5f5f5;
+  padding-bottom: 40psrgsgrssrsgrsx;
+  background-color: #dde6f1;
 }
 
 .form-signin {
   width: 100%;
-  max-width: 330px;
+  max-width: 530px;
   padding: 15px;
   margin: auto;
 }
@@ -23,7 +23,7 @@ body {
 }
 
 .form-signin .form-floating:focus-within {
-  z-index: 2;
+  z-index: 2; 
 }
 
 .top {
@@ -36,5 +36,4 @@ body {
 
 .bottom {
   margin-bottom: 1%;
-
 }
