--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -37,3 +37,12 @@ body {
 .bottom {
   margin-bottom: 1%;
 }
+
+h1 {
+  display: inline;
+}
+
+.boton {
+  display: inline-block;
+  margin-bottom: 5%;
+}
