--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,13 +7,13 @@ body {
   display: flex;
   align-items:center;
   padding-top: 40px;
-  padding-bottom: 40psrgsgrssrsgrsx;
+  padding-bottom: 40;
   background-color: #dde6f1;
 }
 
 .form-signin {
   width: 100%;
-  max-width: 530px;
+  max-width: 900px;
   padding: 15px;
   margin: auto;
 }
@@ -44,5 +44,5 @@ h1 {
 
 .boton {
   display: inline-block;
-  margin-bottom: 5%;
+  margin-bottom: 10%;
 }
