--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,7 +8,7 @@ body {
   align-items:center;
   padding-top: 40px;
   padding-bottom: 40;
-  background-color: #dde6f1;
+  background-color: #3E3D32;
 }
 
 .form-signin {
@@ -59,4 +59,71 @@ h1 {
 
 .greenText{
   color: green;
+}
+
+#result{
+  padding-left: calc(3.5rem + 5px);
+  width:100%;
+  /* Determine appearance of code editor */
+  background-color:#272822;
+  border-color:#272822;
+  color:#ff0000;
+
+  font-family: lucida console, courier new, courier, monospace;
+  margin: 0;
+  padding: 10px 0;
+  height: 20vh;
+  border-radius: 0;
+  resize: none;
+  font-size: 16px;
+  line-height: 1.2;
+  outline: none;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+#code, #lineCounter {
+  font-family: lucida console, courier new, courier, monospace;
+  margin: 0;
+  padding: 10px 0;
+  height: 40vh;
+  border-radius: 0;
+  resize: none;
+  font-size: 16px;
+  line-height: 1.2;
+  outline: none;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+#lineCounter:focus-visible,
+#code:focus-visible {
+    outline:none;
+}
+
+#lineCounter {
+  display: flex;
+  border-color: transparent;
+  overflow-y: hidden;
+  text-align: right;
+  box-shadow: none;
+  color: #707070;
+  background-color: #d8d8d8;
+  position: absolute;
+  width: 3.5rem;
+  /* Determine appearance of line counter */
+  background-color:#3E3D32;
+  border-color:#3E3D32;
+  color:#928869;
+}
+
+#code {
+  padding-left: calc(3.5rem + 5px);
+  width:100%;
+  /* Determine appearance of code editor */
+  background-color:#272822;
+  border-color:#272822;
+  color:#ffffff;
 }
